--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div id="stypy" class="content">
                 <div class="content-in">
                     <img src="assets/icons/stypy.svg">
-                    <p>Zdaniem wielu naszych klientów oferujemy najlepsze torty na&nbspostatnie pożegnanie nie tylko w całej Polsce i nie tylko.</p>
+                    <p>Zdaniem wielu naszych klientów oferujemy najlepsze torty na&nbspostatnie pożegnanie w całej Polsce i nie tylko.</p>
                     <p>Każde święta, czy różnego rodzaju okazje mają swoje okolicznościowe potrawy, czy ciasta. Nie jest tutaj wyjątkiem&nbsprównież i uroczystość pogrzebowa. W wielu kulturach&nbsppo&nbsppogrzebie organizuje się stypę i zaprasza uczestników&nbspna&nbsppoczęstunek.</p>
                     <p>Pyszne ciasta przygotowywane przez Naszych doświadczonych cukierników&nbsppozwolą&nbspCi polepszyć każde przyjęcia nawet stypy. <br>Nasi cukiernicy doskonale ujmują w swoich dziełach powagę, <br>godność oraz uszanowanie.</p>
                     <p>Cena tortu na stypę uzależniona jest od rozmiaru tortu oraz indywidualnych preferencji w obszarze jego dekoracji. Jesteśmy w stanie wykonać dla Państwa dosłownie każdy tort na stypę na zamówienie. </p>
