--- a/index.html
+++ b/index.html
@@ -59,7 +59,24 @@
                             <li><a onClick="activeKontakt(); openKontakt();" class="header-links" id="kontakt-a"><img class="icon-menu1" src="assets/icons/kontakt.svg"><img class="icon-menu2" src="assets/icons/kontakt2.svg">Kontakt</a></li>
                         </ol>
                     </div>
+                    <div id="header-cz3">
+                        <input id="toggle" type="checkbox">
+                        <div for="toggle" class="hamburger">
+                            <div class="top-bun"></div>
+                            <div class="meat"></div>
+                            <div class="bottom-bun"></div>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="menu-items">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">blogs</a></li>
+                    <li><a href="#">portfolio</a></li>
+                    <li><a href="#">contact</a></li>
+                </ul>
             </div>
             <div id="logo-center" onClick="activeHome(); openHome();" class="load2-animation-center load2-animation2-center logo-center2 logo-center3">
                 <img id="center-logo" class="icon-menu1" src="assets/images/logo-center.png"><img id="center-logo" class="icon-menu2" src="assets/images/logo-center-gold.png">
@@ -70,12 +87,14 @@
                     <img src="assets/icons/oferta.svg">
                     <p class="p-no-br">W naszej cukierni znajdą Państwo tylko wyroby najwyższej <br>jakości. Dbamy tak samo o smak, jak i o wygląd wypieków.</p>
                     <p class="p-no-br">Cukiernia PanBabeczka przyciągają zapachem i wyjątkowo <br>bogatym wyborem słodkości. Wykorzystując tradycyjne <br>rodzinne receptury i metody pieczenia tworzymy magicznie <br>pyszne słodkości, które przyciągają smakiem i zapachem.</p>
-                    <p>Nasze produkty: <br>
+                    <p>
+                        Nasze produkty: <br>
                         ◦ ciasta <br>
                         ◦ ciastka <br>
                         ◦ torty  <br>
                         ◦ słodycze <br>
-                        ◦ wiele więcej... </p>
+                        ◦ wiele więcej...
+                    </p>
                     <p class="p-no-br">W naszych cukierniach wypiekamy wyroby oparte o tradycyjne, <br>regionalne receptury. Ich domowy smak znany nam doskonale <br>z babcinych stołów, pozostaje ciągle z nami. Przywiązani do <br>tradycji patrzymy przed siebie wzbogacając swoją słodką ofertę.</p>
                     <p class="p-no-br">Do najpopularniejszych wypieków należą np.: szarlotki, desery, ciasta <br>kruche, bezy czekoladowe, delicji, ciast owocowych i mnóstwo innych.</p>
                 </div>
@@ -85,13 +104,15 @@
                     <img src="assets/icons/ciasta.svg">
                     <p class="p-no-br">Nasza cukiernia słynie z wypieku tradycyjnych ciast, które <br>od lat królują na naszych stołach. Makowce, pierniki, serniki, szarlotki i inne smakołyki - ich przygotowywanie naprawdę <br>opanowaliśmy do perfekcji. Bazujemy na sprawdzonych, dopracowywanych przez lata recepturach.</p>
                     <p class="p-no-br">Zawsze na bazie świeżych, najwyższej jakości składników, <br>bez konserwantów i sztucznych barwników. Oczywiście <br>nie brakuje i propozycji całkiem nowoczesnych, finezyjnych.</p>
-                    <p>W naszej cukierni znajdą Państwo przeróżne propozycje ciast: <br>
+                    <p>
+                        W naszej cukierni znajdą Państwo przeróżne propozycje ciast: <br>
                         ◦ kruchych <br>
                         ◦ drożdżowych <br>
                         ◦ francuskich  <br>
                         ◦ z owocami <br>
                         ◦ z kremem <br>
-                        ◦ wiele więcej... </p>
+                        ◦ wiele więcej...
+                    </p>
                     <p class="p-no-br">Nie sposób ich wszystkich wymienić. Dokładamy wszelkich starań, <br>by nie tylko doskonale smakowały, lecz także pobudzały apetyt samym wyglądem. Wiele przepisów na ciasta opieramy na wybitnych, polskich <br>tradycjach przekazywanych z pokolenia na pokolenie. </p>
                 </div>
             </div>
@@ -100,12 +121,14 @@
                     <img src="assets/icons/ciastka.svg">
                     <p class="p-no-br">Odwiedzając Cukiernie PanBabeczka mają Państwo <br>możliwość wyboru wielu rodzajów ciastek wypiekanych <br>w oparciu o tradycyjne i sprawdzone receptury. Podstawą naszych słodkości są odpowiednio dobrane, najlepsze półprodukty od lokalnych dostawców. Ciekawe połączenia smaków oraz ręczne wykonanie sprawia, że słodkości <br>z naszych cukierni nie mają sobie równych.</p>
                     <p class="p-no-br">Któż z nas nie lubi kruchych ciasteczek, które doskonale komponują się <br>z kawą? Świetnie spełniają one rolę samodzielnej przekąski oraz dodatków <br>do wielu dań. Jednak, aby miały one odpowiednio wyważony smak i aromat, muszą być wyrabiane z wyselekcjonowanych, świeżych składników oraz według tradycyjnych receptur. I takie właśnie ciasteczka zakupisz w naszej cukierni.</p>
-                    <p>Asortyment jest bardzo szeroki i obejmuje między innymi: <br>
+                    <p>
+                        Asortyment jest bardzo szeroki i obejmuje między innymi: <br>
                         ◦ ciastka kruche mleczne <br>
                         ◦ ciastka kruche z marmoladką <br>
                         ◦ ciastka czekoladowe <br>
                         ◦ ciastka owsiane <br>
-                        ◦ wiele więcej... </p>
+                        ◦ wiele więcej...
+                    </p>
                     <p class="p-no-br">Serdecznie zapraszamy do wypróbowania naszych wypieków. Mamy nadzieję, że spełnią one Twoje wymagania i zostaniesz stałym bywalcem cukierni PanBabeczka!</p>
                 </div>
             </div>
@@ -133,7 +156,8 @@
                 <div class="content-in">
                     <img src="assets/icons/inne.svg">
                     <p class="p-no-br">W cukierni PanBabeczka nie znajdziesz samych ciast, <br>tortów, czy pieczywa - znajdziesz również wiele innych <br>wyśmienitych produktów jakimi dysponujemy.</p>
-                    <p>Coraz większą popularność zyskują m.in.: <br>
+                    <p>
+                        Coraz większą popularność zyskują m.in.: <br>
                         ◦ Lody <br>
                         ◦ Kawy <br>
                         ◦ Konfitury <br>
@@ -147,7 +171,8 @@
                 <div class="content-in">
                     <img src="assets/icons/imprezy.svg">
                     <p class="p-no-br">W poszukiwaniu idealnego wypieku na specjalną uroczystość powinieneś poznać torty artystyczne, które&nbspprzygotowujemy w&nbspCukierni PanBabeczka. Oferujemy wyborne słodkości wykonane na&nbspbazie biszkoptów i&nbspsmakowitych kremów, ozdabiane fantazyjnymi dekoracjami. Cena tych jakże <br>wyjątkowych deserów jest przystępna.</p>
-                    <p>Doskonale nadają się na wiele okazji, na przykład: <br>
+                    <p>
+                        Doskonale nadają się na wiele okazji, na przykład: <br>
                         ◦ Wesela <br>
                         ◦ Komunie <br>
                         ◦ Urodziny <br>
@@ -162,7 +187,8 @@
                     <img src="assets/icons/chrzty.svg">
                     <p class="p-no-br">Celebrowanie pierwszego sakramentu Twojego dziecka będzie na&nbsppewno&nbspudane, jeśli&nbspzdecydujesz się na tort na chrzest święty, w wersji dla chłopca lub dziewczynki. Przygotujemy&nbspdla&nbspCiebie&nbspsmakowity wypiek na zamówienie, przeznaczony na to wyjątkowe wydarzenie, czyli&nbspchrzciny. Dzięki wieloletniemu doświadczeniu w branży cukierniczej stworzymy wyśmienity produkt, którego cena na pewno pozytywnie Cię zaskoczy.</p>
                     <p class="p-no-br">Nasze torty dla chłopców i dziewczynek przystępujących do chrztu świętego&nbspwykonujemy&nbspna&nbsppodstawie autorskich receptur, które gwarantują niesamowite&nbspdoznania&nbspsmakowe. Składają się m.in. z niezwykle puszystego biszkoptu, przekładanego delikatnym kremem z dodatkami i jest zwieńczony piękną dekoracją. </p>
-                    <p>Możesz je zamówić z dostawą do domu - do dyspozycji masz wiele wyśmienitych smaków, takich jak: <br>
+                    <p>
+                        Możesz je zamówić z dostawą do domu - do dyspozycji masz wiele wyśmienitych smaków, takich jak: <br>
                         ◦ wiedeński <br>
                         ◦ hiszpański orzechowy <br>
                         ◦ truskawkowy <br>
@@ -176,7 +202,8 @@
                 <div class="content-in">
                     <img src="assets/icons/komunie.svg">
                     <p class="p-no-br">Na zamówienie przygotujemy okrągły tort na komunię dla&nbspdziewczynki i chłopca - za jego przygotowanie będą odpowiedzialni najlepsi cukiernicy. Smakowity, wypełniony gęstym i puszystym kremem to niezbędny element każdego przyjęcia z okazji przystąpienia do tego sakramentu. Oferujemy&nbspwiele interesujących słodkości, których cena zawsze&nbsppozytywnie zaskakuje. Produkty te wyróżniają się&nbsppięknymi dekoracjami oraz wybornym smakiem.</p>
-                    <p>Przygotowujemy torty w wielu wersjach, np.: <br>
+                    <p>
+                        Przygotowujemy torty w wielu wersjach, np.: <br>
                         ◦ dekoracyjnej na stelażu <br>
                         ◦ prostokątnej <br>
                         ◦ okrągłej <br>
@@ -191,7 +218,8 @@
                 <div class="content-in">
                     <img src="assets/icons/wesela.svg">
                     <p class="p-no-br">Jeśli chcesz, aby Twoje przyjęcie ślubne było udane, sprawdź&nbspnasze torty weselne na stelażu i wybierz idealną opcję&nbspna&nbsptę&nbspważna&nbspuroczystość. Cukiernia PanBabeczka oferuje&nbspprodukty o wyśmienitym smaku i pięknym wyglądzie, których&nbspcena jest zawsze atrakcyjna. Mamy doświadczenie w&nbspprzyrządzaniu wybornych słodkości na specjalne okazje.</p>
-                    <p>Sprzedajemy je m.in. w: <br>
+                    <p>
+                        Sprzedajemy je m.in. w: <br>
                         ◦ Warszawie <br>
                         ◦ Białymstoku <br>
                         ◦ Bydgoszczy <br>
@@ -362,17 +390,21 @@
             <div id="kontakt" class="content">
                 <div class="content-in">
                     <img src="assets/icons/kontakt.svg">
-                    <p>CUKIERNIA PANBABECZKA - RADOM <br>
+                    <p>
+                        CUKIERNIA PANBABECZKA - RADOM <br>
                         ul. Limanowskiego 26/30 - 26-600 Radom
                     </p>
-                    <p>Cukiernia: tel. +48 624 502 302 <br>
+                    <p>
+                        Cukiernia: tel. +48 624 502 302 <br>
                         Web Dev: tel. +48 722 367 101
                     </p>
-                    <p>Godziny otwarcia: <br>
+                    <p>
+                        Godziny otwarcia: <br>
                         Pon.-Pt: 08:00 - 20:00 <br>
                         Sob.-Niedz: 10:00 - 16:00
                     </p>
-                    <p>Znajdziesz nas w miastach:<br>
+                    <p>
+                        Znajdziesz nas w miastach:<br>
                         #Radom #Wrocław #Warszawa #Kielce #Kraków #Lublin #Gliwice<br class="no-br">#Poznań #Szczecin #Katowice #Toruń #Białystok #Łódź #Rzeszów
                     </p>
                     <iframe loading="lazy" src="https://maps.google.pl/maps?f=q&amp;source=s_q&amp;hl=pl&amp;geocode=&amp;q=Zesp%C3%B3%C5%82+Szk%C3%B3%C5%82+Technicznych+im.+T.+Ko%C5%9Bciuszki,+Radom&amp;aq=t&amp;sll=52.24755,21.193789&amp;sspn=4.096603,9.162598&amp;ie=UTF8&amp;hq=Zesp%C3%B3%C5%82+Szk%C3%B3%C5%82+Technicznych+im.+T.+Ko%C5%9Bciuszki,+Radom&amp;hnear=&amp;radius=15000&amp;t=m&amp;cid=6750039422334378194&amp;ll=51.407451,21.135378&amp;spn=0.018739,0.045147&amp;z=14&amp;iwloc=A&amp;output=embed" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
