--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="assets/scripts/closeul.js"></script>
     <script src="assets/scripts/load.js"></script>
     <script src="assets/scripts/onselect.js"></script>
+    <script src="assets/scripts/openmenu.js"></script>
 
 </head>
 
@@ -60,7 +61,7 @@
                         </ol>
                     </div>
                     <div id="header-cz3">
-                        <input id="toggle" type="checkbox">
+                        <input id="toggle" type="checkbox" onClick="openMenu();">
                         <div for="toggle" class="hamburger">
                             <div class="top-bun"></div>
                             <div class="meat"></div>
@@ -69,15 +70,106 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-items">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">blogs</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">contact</a></li>
-                </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <div id="menu-items">
+                <ol class="ol">
+                    <li><a onClick="activeHome(); openHome(); closeMenu();" class="header-links" id="home-a"><img class="icon-menu1" src="assets/icons/home.svg"><img class="icon-menu2" src="assets/icons/home2.svg">Strona Główna</a></li>
+                    <li><a onClick="activeOferta(); openOferta(); closeMenu();" class="header-links" id="oferta-a"><img class="icon-menu1" src="assets/icons/oferta.svg"><img class="icon-menu2" src="assets/icons/oferta2.svg">Oferta</a></li>
+                    <li><a onClick="activeImprezy(); openImprezy(); closeMenu();" class="header-links" id="imprezy-a"><img class="icon-menu1" src="assets/icons/imprezy.svg"><img class="icon-menu2" src="assets/icons/imprezy2.svg">Imprezy</a></li>
+                    <li><a onClick="activeOsiagniecia(); openOsiagniecia(); closeMenu();" class="header-links" id="osiagniecia-a"><img class="icon-menu1" src="assets/icons/osiagniecia.svg"><img class="icon-menu2" src="assets/icons/osiagniecia2.svg">Osiągnięcia</a></li>
+                    <li><a onClick="activeGaleria(); openGaleria(); closeMenu();" class="header-links" id="galeria-a"><img class="icon-menu1" src="assets/icons/galeria.svg"><img class="icon-menu2" src="assets/icons/galeria2.svg">Galeria</a></li>
+                    <li><a onClick="activeKontakt(); openKontakt(); closeMenu();" class="header-links" id="kontakt-a"><img class="icon-menu1" src="assets/icons/kontakt.svg"><img class="icon-menu2" src="assets/icons/kontakt2.svg">Kontakt</a></li>
+                </ol>
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <div id="logo-center" onClick="activeHome(); openHome();" class="load2-animation-center load2-animation2-center logo-center2 logo-center3">
                 <img id="center-logo" class="icon-menu1" src="assets/images/logo-center.png"><img id="center-logo" class="icon-menu2" src="assets/images/logo-center-gold.png">
                 <a onClick="activeHome(); openHome();" id="center-link">Cukiernia - PanBabeczka.pl</a>
