--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         ◦ wiele więcej...
                     </p>
                     <p class="p-no-br">Proponujemy Ci torty artystyczne z darmową dostawą do domu, <br>których wyborny smak zadowoli nawet najbardziej wybrednych gości. <br>Nasza cukiernia ma ponad 100 oddziałów w całym kraju, dlatego możesz cieszyć się tymi wspaniałymi wyrobami bez względu na miejsce zamieszkania.</p>
-                    <p class="p-no-br">Za warstwę artystyczną naszych wypieków odpowiedzialna jest m.in. <br>Jowita Woszczyńska, Mistrzyni Świata z 2019 roku w dekorowaniu tortów, <br>która pokonała pozostałych 16 uczestników konkursu. Jej prace to prawdziwe dzieła sztuki cukierniczej, dlatego polecamy je również w przypadku <br>organizacji bardzo prestiżowego wydarzenia.</p>
+                    <p class="p-no-br">Za warstwę artystyczną naszych wypieków odpowiada m.in. <br>Jowita Woszczyńska, Mistrzyni Świata z 2019 roku w dekorowaniu tortów, <br>która pokonała pozostałych 16 uczestników konkursu. Jej prace to prawdziwe dzieła sztuki cukierniczej, dlatego polecamy je w przypadku <br>organizacji bardzo prestiżowego wydarzenia.</p>
                 </div>
             </div>
             <div id="chrzty" class="content">
