--- a/index.html
+++ b/index.html
@@ -70,61 +70,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <div id="menu-items">
                 <ol class="ol">
                     <li><a onClick="activeHome(); openHome(); closeMenu();" class="header-links" id="home-a"><img class="icon-menu1" src="assets/icons/home.svg"><img class="icon-menu2" src="assets/icons/home2.svg">Strona Główna</a></li>
@@ -135,41 +80,6 @@
                     <li><a onClick="activeKontakt(); openKontakt(); closeMenu();" class="header-links" id="kontakt-a"><img class="icon-menu1" src="assets/icons/kontakt.svg"><img class="icon-menu2" src="assets/icons/kontakt2.svg">Kontakt</a></li>
                 </ol>
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <div id="logo-center" onClick="activeHome(); openHome();" class="load2-animation-center load2-animation2-center logo-center2 logo-center3">
                 <img id="center-logo" class="icon-menu1" src="assets/images/logo-center.png"><img id="center-logo" class="icon-menu2" src="assets/images/logo-center-gold.png">
                 <a onClick="activeHome(); openHome();" id="center-link">Cukiernia - PanBabeczka.pl</a>
@@ -386,7 +296,7 @@
                 <div class="content-in">
                     <img src="assets/icons/galeria.svg">
                     <p>"NIEZWYKŁE TORTY, CIASTA, LODY, CZY WYPIEKI, <br>PO PROSTU WSPANIAŁE!" - skomentowała Para Młodych</p>
-                    <p>Spójrz tylko jak Nasi wybitni cukiernicy pracowali przez <br>ostatnie kilka miesięcy. Na okrągło wymyślają coś nowego, <br>zaskakując samych właścicieli, co lepsza naszych klientów.</p>
+                    <p class="p-no-br">Spójrz tylko jak Nasi wybitni cukiernicy pracowali przez <br>ostatnie kilka miesięcy. Na okrągło wymyślają coś nowego, <br>zaskakując samych właścicieli, co lepsza naszych klientów.</p>
                     <div class="gallery">
                         <div class="gallery-row">
                             <div class="images">
@@ -508,5 +418,4 @@
             </div>
         </div>
     </body>
-
 </html>
